--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
 
             <!-- Botón para limpiar watchlist -->
             <button
+              id="btn-empty"
               class="w-full mt-6 bg-red-600 hover:bg-red-700 text-white py-2 px-4 rounded-lg transition-colors"
             >
               <i class="fas fa-trash mr-2"></i>
